BUGFIX: Prevent icons in dropdowns from being too large with FA 6.x

--- a/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeSearchInput/style.module.css
+++ b/packages/neos-ui/src/Containers/LeftSideBar/NodeTreeSearchBar/NodeTreeSearchInput/style.module.css
@@ -23,6 +23,7 @@
     position: absolute;
     left: var(--spacing-Full);
     height: var(--spacing-GoldenUnit);
+    width: 1em;
 }
 
 .wrapper {
